--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "6.0.3",
     "@angular/router": "6.0.3",
     "@auth0/angular-jwt": "^2.0.0",
+    "angular-in-memory-web-api": "^0.6.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
@@ -32,6 +33,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.6",
     "@angular/cli": "6.0.7",
     "@angular/compiler-cli": "6.0.3",
     "@angular/language-service": "6.0.3",
@@ -46,10 +48,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.3.2",
     "ts-node": "~4.1.0",
     "tslint": "^5.10.0",
-    "typescript": "^2.7.2",
-    "@angular-devkit/build-angular": "~0.6.6"
+    "typescript": "^2.7.2"
   }
 }
